--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.2-dev.7",
+  "version": "1.0.2-dev.9",
   "description": "TSRPC Base Client",
   "main": "index.cjs",
   "exports": {
@@ -26,8 +26,8 @@
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
     "k8w-extend-native": "^1.4.5",
-    "tsbuffer": "^2.0.1",
-    "tsrpc-proto": "^1.3.2"
+    "tsbuffer": "^2.0.2-dev.0",
+    "tsrpc-proto": "^1.3.3-dev.0"
   },
   "devDependencies": {
     "@microsoft/api-documenter": "^7.12.21",
