--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.2-dev.43",
+  "version": "1.0.2",
   "description": "TSRPC Base Client",
   "main": "index.cjs",
   "exports": {
@@ -30,9 +30,9 @@
     "tsrpc-proto": "^1.3.3"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.19",
+    "@microsoft/api-documenter": "^7.13.20",
     "@microsoft/api-extractor": "^7.16.1",
-    "rollup": "^2.51.2",
+    "rollup": "^2.52.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.2"
