--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.5-dev.0",
+  "version": "1.0.5",
   "description": "TSRPC Base Client",
   "main": "index.cjs",
   "exports": {
@@ -31,10 +31,10 @@
     "tsrpc-proto": "^1.3.4"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.20",
+    "@microsoft/api-documenter": "^7.13.22",
     "@microsoft/api-extractor": "^7.16.1",
-    "rollup": "^2.52.0",
+    "rollup": "^2.52.1",
     "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.3"
   }
 }
