--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.7-dev.1",
+  "version": "1.0.7",
   "description": "TSRPC Base Client",
   "main": "index.cjs",
   "exports": {
