--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "TSRPC Base Client",
   "main": "index.cjs",
   "exports": {
@@ -25,16 +25,16 @@
   },
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
-    "k8w-extend-native": "^1.4.5",
-    "tsbuffer": "^2.0.4",
+    "k8w-extend-native": "~1.4.5",
+    "tsbuffer": "~2.0.4",
     "tslib": "^2.3.1",
-    "tsrpc-proto": "^1.3.4"
+    "tsrpc-proto": "~1.3.4"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.42",
-    "@microsoft/api-extractor": "^7.18.7",
-    "rollup": "^2.56.3",
+    "@microsoft/api-documenter": "^7.13.54",
+    "@microsoft/api-extractor": "^7.18.11",
+    "rollup": "^2.57.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   }
 }
