--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "TSRPC Base Client",
-  "main": "index.cjs",
+  "main": "index.js",
   "exports": {
-    "require": "./index.cjs",
+    "require": "./index.js",
     "import": "./index.mjs"
   },
   "scripts": {
@@ -25,15 +25,15 @@
   },
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
-    "k8w-extend-native": "~1.4.5",
+    "k8w-extend-native": "~1.4.6",
     "tsbuffer": "~2.0.4",
     "tslib": "^2.3.1",
     "tsrpc-proto": "~1.3.4"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.54",
-    "@microsoft/api-extractor": "^7.18.11",
-    "rollup": "^2.57.0",
+    "@microsoft/api-documenter": "^7.13.62",
+    "@microsoft/api-extractor": "^7.18.15",
+    "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.3"
   }
