--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.14",
+  "version": "1.0.15-dev.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -26,13 +26,13 @@
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
     "k8w-extend-native": "~1.4.6",
-    "tsbuffer": "~2.0.4",
+    "tsbuffer": "~2.0.5",
     "tslib": "^2.3.1",
-    "tsrpc-proto": "~1.3.4"
+    "tsrpc-proto": "~1.3.6"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.62",
-    "@microsoft/api-extractor": "^7.18.15",
+    "@microsoft/api-documenter": "^7.13.63",
+    "@microsoft/api-extractor": "^7.18.16",
     "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.4"
