--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.0.15-dev.1",
+  "version": "1.0.15",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -24,7 +24,7 @@
     "url": "https://github.com/k8w/tsrpc-base-client/issues"
   },
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
-  "peerDependencies": {
+  "dependencies": {
     "k8w-extend-native": "~1.4.6",
     "tsbuffer": "~2.0.5",
     "tslib": "^2.3.1",
