--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.1.0-dev.12",
+  "version": "1.1.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
-    "k8w-extend-native": "~1.4.6",
-    "tsbuffer": "~2.1.0-dev.0",
+    "k8w-extend-native": "^1.4.6",
+    "tsbuffer": "^2.1.0",
     "tslib": "^2.3.1",
-    "tsrpc-proto": "~1.3.9"
+    "tsrpc-proto": "^1.3.9"
   },
   "devDependencies": {
     "@microsoft/api-documenter": "^7.13.67",
