--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.1.0",
+  "version": "1.2.0-dev.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
