--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.2.0-dev.1",
+  "version": "1.2.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
     "k8w-extend-native": "^1.4.6",
-    "tsbuffer": "^2.1.2",
+    "tsbuffer": "^2.1.3",
     "tslib": "^2.3.1",
     "tsrpc-proto": "^1.3.9"
   },
@@ -35,7 +35,7 @@
     "@microsoft/api-extractor": "^7.18.19",
     "mocha": "^9.1.3",
     "rollup": "^2.60.0",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.31.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
