--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.2.3",
+  "version": "1.2.4-dev.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -26,17 +26,17 @@
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
     "k8w-extend-native": "^1.4.6",
-    "tsbuffer": "^2.1.4",
+    "tsbuffer": "^2.1.5",
     "tslib": "^2.3.1",
-    "tsrpc-proto": "^1.3.9"
+    "tsrpc-proto": "^1.3.10"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.68",
-    "@microsoft/api-extractor": "^7.18.19",
+    "@microsoft/api-documenter": "^7.13.77",
+    "@microsoft/api-extractor": "^7.19.2",
     "mocha": "^9.1.3",
-    "rollup": "^2.60.0",
-    "rollup-plugin-typescript2": "^0.31.0",
+    "rollup": "^2.61.1",
+    "rollup-plugin-typescript2": "^0.31.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   }
 }
