--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.2.4-dev.1",
+  "version": "1.2.4",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
