--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "1.2.6",
+  "version": "2.0.0-dev.0",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -26,17 +26,17 @@
   "homepage": "https://github.com/k8w/tsrpc-base-client#readme",
   "dependencies": {
     "k8w-extend-native": "^1.4.6",
-    "tsbuffer": "^2.1.7",
-    "tslib": "^2.3.1",
-    "tsrpc-proto": "^1.3.10"
+    "tsbuffer": "^2.2.0-dev.0",
+    "tslib": "*",
+    "tsrpc-proto": "^1.4.0-dev.0"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.14.1",
+    "@microsoft/api-documenter": "^7.15.3",
     "@microsoft/api-extractor": "^7.19.4",
-    "mocha": "^9.1.3",
-    "rollup": "^2.63.0",
-    "rollup-plugin-typescript2": "^0.31.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "mocha": "^9.2.1",
+    "rollup": "^2.68.0",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
