--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsrpc-base-client",
-  "version": "2.0.7",
+  "version": "2.0.8-dev.1",
   "description": "TSRPC Base Client",
   "main": "index.js",
   "exports": {
@@ -31,12 +31,12 @@
     "tsrpc-proto": "^1.4.2"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.17.16",
-    "@microsoft/api-extractor": "^7.24.2",
+    "@microsoft/api-documenter": "^7.17.17",
+    "@microsoft/api-extractor": "^7.25.0",
     "mocha": "^9.2.2",
-    "rollup": "^2.75.5",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "rollup": "^2.75.6",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
